# devops-engineer-from-scratch-project-313

./: .gitignore  Dockerfile  Makefile  README.md  main.py  model.py  my_domain.conf  package-lock.json  package.json  pyproject.toml  start.sh
.github/workflows/: ci.yml
tests/: conftest.py  test_api.py  test_ping.py
