[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.138.1",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "sentry-sdk[fastapi]>=2.63.0",
    "sqlmodel>=0.0.39",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
